Added mechanism to change start nodes

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
   flex-direction: column;
 }
 
-.edge text {
-  color: grey !important;
+svg text {
+  cursor: default;
+  user-select: none;
 }
